--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -14,11 +14,25 @@
     </properties>
 
     <dependencies>
-        <dependency>
+       <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.1.0</version>
+            <version>5.9.3</version> <!-- o la última versión disponible -->
             <scope>test</scope>
-         </dependency>
+        </dependency>
+         <!-- Dependencia de Selenium -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.10.0</version>
+        </dependency>
+
+        <!-- Dependencia de TestNG -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.8.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
