--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -40,5 +40,11 @@
             <artifactId>javafaker</artifactId>
             <version>1.0.2</version>
         </dependency>
+        <dependency>
+        <groupId>com.beust</groupId>
+        <artifactId>jcommander</artifactId>
+        <version>1.82</version>
+        <scope>test</scope>
+    </dependency>
     </dependencies>
 </project>
